--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mysql": "^2.15.0",
-    "winston": "~3.0.0-rc5"
+    "winston": "~3.0.0-rc5",
+    "body-parser": "latest"
   }
 }
