--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,29 @@ version: '3.3'
 volumes:
   data:
 services:
-  db:
+  app:
+    container_name: claro-app
+    image: node:6.10
+    volumes:
+     - ./:/app
+    links:
+     - mysql:mysql
+    depends_on:
+      - mysql
+    ports:
+     - "3000:3000"
+    working_dir: /app
+    entrypoint: node index.js
+
+  mysql:
+    container_name: database-mysql
     image: mysql:5.6
     ports:
       - "3306:3306"
     volumes:
       - data:/var/lib/mysql
+      - ./database/setup.sql:/docker-entrypoint-initdb.d/setup.sql
     environment:
       - MYSQL_ROOT_PASSWORD=passwd
       - MYSQL_DATABASE=clarodb
+
