--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "claro-brasil-challenge-backend-nodejs",
   "version": "0.0.1",
   "main": "index.js",
+  "scripts": {
+    "start": "index.js"
+  },
   "dependencies": {
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "winston": "~3.0.0-rc5",
     "body-parser": "latest",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "mocha": "^5.1.1"
   }
 }
