--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "express": "^4.16.3",
@@ -12,6 +13,9 @@
     "body-parser": "latest",
     "moment": "^2.22.1",
     "mocha": "^5.1.1",
-    "config": "^1.30.0"
+    "config": "^1.30.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mock-require": "^3.0.2"
   }
 }
