--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "index.js",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "dependencies": {
     "express": "^4.16.3",
